force-app/main/default/objects/Account/fields/CC_Tipo_Centro__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Centro__c</fullName>
    <description>Tipo de Centro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Centro</label>
    <length>3</length>
    <type>Text</type>
</CustomField>