force-app/main/default/objects/Account/fields/CC_Tipo_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Oficina__c</fullName>
    <description>Tipo de oficina</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Oficina</label>
    <length>1</length>
    <type>Text</type>
</CustomField>