force-app/main/default/objects/Account/fields/CC_Tipo_Persona__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Persona__c</fullName>
    <description>Campo tipo fórmula para calcular el recordtype que tiene la cuenta</description>
    <formula>IF(RecordType.DeveloperName == &apos;CC_Cliente&apos;, &apos;J&apos;, IF(RecordType.DeveloperName == &apos;CC_ClientePA&apos;, &apos;F&apos;, &apos;X&apos;))</formula>
    <label>Tipo Persona</label>
    <type>Text</type>
</CustomField>