force-app/main/default/objects/Account/fields/CC_TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoDocumento__c</fullName>
    <description>Tipo de documento de identificación.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de documento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>