force-app/main/default/objects/Account/fields/CC_Tipolog__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipolog__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipolog</label>
    <length>2</length>
    <type>Text</type>
</CustomField>