force-app/main/default/objects/Account/fields/CC_TipoPersona__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoPersona__c</fullName>
    <description>Tipo de persona (particular o jurídica).</description>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>J</fullName>
                <label>Jurídica</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Física</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Desconocido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>