force-app/main/default/objects/Account/fields/CC_Total_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Total_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up directo a la TE de la cuenta.</description>
    <label>Total empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Total empresa)</relationshipLabel>
    <relationshipName>CC_Total_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>