force-app/main/default/objects/Account/fields/CIBE_AccountTeam__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AccountTeam__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>