force-app/main/default/objects/Account/fields/CIBE_AhorroEInversion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AhorroEInversion__c</fullName>
    <description>Importe de ahorro e inversión del cliente</description>
    <formula>AV_AhorroEInversion__c</formula>
    <inlineHelpText>Values shown are from the previous day</inlineHelpText>
    <label>Ahorro e Inversión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>