force-app/main/default/objects/Account/fields/CIBE_AhorroEInversion_T1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AhorroEInversion_T1__c</fullName>
    <description>Importe de ahorro e inversión T1 del cliente</description>
    <label>Ahorro e Inversión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>