force-app/main/default/objects/Account/fields/CIBE_BookCenter__c.field-meta.xml
<CustomField>
    <fullName>CIBE_BookCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina Carterización del cliente</description>
    <label>Oficina carterización</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Oficina Carterización)</relationshipLabel>
    <relationshipName>AccountsBookCenter</relationshipName>
    <type>Lookup</type>
</CustomField>