force-app/main/default/objects/Account/fields/CIBE_CashFlow__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CashFlow__c</fullName>
    <description>Campo &quot;Cash Flow&quot; del Estado Financiero importado en la integración GBL</description>
    <label>Cash Flow</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>