force-app/main/default/objects/Account/fields/CIBE_CentrosCarteras__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CentrosCarteras__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Centros-Carteras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>