force-app/main/default/objects/Account/fields/CIBE_Cirbe__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Cirbe__c</fullName>
    <description>cuota de Caixa</description>
    <inlineHelpText>CXB/Other entities fee arranged %</inlineHelpText>
    <label>CIRBE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>