force-app/main/default/objects/Account/fields/CIBE_CNAE__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CNAE__c</fullName>
    <description>Campo &quot;CNAE&quot; del Estado Financiero importado en la integración GBL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CNAE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>