force-app/main/default/objects/Account/fields/CIBE_Comisiones__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Comisiones__c</fullName>
    <description>campo &quot;Comisiones Gestion/Gastos asociados&quot; del TF importado en la integración IGC</description>
    <label>Comisiones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>