force-app/main/default/objects/Account/fields/CIBE_ConfiEquipoCXB__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ConfiEquipoCXB__c</fullName>
    <description>Nos dice si el número de Centro del Account es el mismo que el de el usuario loggeado</description>
    <formula>IF(
    AND(
        NOT(ISBLANK($User.CIBE_Centro__c)),
        NOT(ISBLANK(CIBE_BookCenter__r.CC_Numero_Oficina__c)),
        CONTAINS($User.CIBE_Centro__c, CIBE_BookCenter__r.CC_Numero_Oficina__c)
    ),
    true,
    false
)</formula>
    <label>Confidencialidad EquipoCXB</label>
    <type>Checkbox</type>
</CustomField>