force-app/main/default/objects/Account/fields/CIBE_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>CIBE_EBITDA__c</fullName>
    <description>Campo calculado que se obtiene de dividir  ‘Deuda financiera neta / EBITDA’ y
‘Deuda financiera neta’ del Estado Financiero importado en la integración GBL</description>
    <label>EBITDA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>