force-app/main/default/objects/Account/fields/CIBE_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Facturacion__c</fullName>
    <label>Facturación</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>