force-app/main/default/objects/Account/fields/CIBE_Fecha_EEFF__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Fecha_EEFF__c</fullName>
    <description>Mostramos la fecha de los datos mostrados para el Estado Financiero.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha de obtención del estado financiero.</inlineHelpText>
    <label>Fecha estado financiero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>