force-app/main/default/objects/Account/fields/CIBE_FechaPD__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaPD__c</fullName>
    <description>Fecha del cálculo PD provinente del sistema de información de riesgo (integración SIR)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha PD</label>
    <type>Date</type>
</CustomField>