force-app/main/default/objects/Account/fields/CIBE_FechaRefrescoCirbe__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaRefrescoCirbe__c</fullName>
    <description>Fecha en el que JSON de CIRBE es refrescado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Refresco Cirbe</label>
    <type>DateTime</type>
</CustomField>