force-app/main/default/objects/Account/fields/CIBE_FechaRefrescoEEFF__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaRefrescoEEFF__c</fullName>
    <description>Campo para controlar la fecha de refresco del servicio de actualización de Estados Financieros</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Refresco Estados Financieros</label>
    <type>DateTime</type>
</CustomField>