force-app/main/default/objects/Account/fields/CIBE_FechaRefrescoRiesgoAgrupado__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaRefrescoRiesgoAgrupado__c</fullName>
    <description>Almacenamos la fecha en la cual se ha hecho la última llamada al servicio de Riesgo Acumulado del Terminal Financiero</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Refresco Riesgo Agrupado</label>
    <type>Date</type>
</CustomField>