force-app/main/default/objects/Account/fields/CIBE_FechaRefrescoSIR__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaRefrescoSIR__c</fullName>
    <description>fecha de Refresco Integración SIR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Refresco SIR</label>
    <type>DateTime</type>
</CustomField>