force-app/main/default/objects/Account/fields/CIBE_Financiacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Financiacion__c</fullName>
    <description>Importe de financiación del cliente</description>
    <formula>AV_Financiacion__c</formula>
    <inlineHelpText>Values shown are from the previous day</inlineHelpText>
    <label>Financing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>