force-app/main/default/objects/Account/fields/CIBE_Financiacion_IGC_Tn__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Financiacion_IGC_Tn__c</fullName>
    <description>Importe de financiación IGC Tn del cliente</description>
    <label>Financiación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>