force-app/main/default/objects/Account/fields/CIBE_GrupoComercial__c.field-meta.xml
<CustomField>
    <fullName>CIBE_GrupoComercial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>