force-app/main/default/objects/Account/fields/CIBE_GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>CIBE_GrupoEconomico__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo económico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>