force-app/main/default/objects/Account/fields/CIBE_IDInternacional__c.field-meta.xml
<CustomField>
    <fullName>CIBE_IDInternacional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Internacional</label>
    <length>18</length>
    <type>Text</type>
</CustomField>