force-app/main/default/objects/Account/fields/CIBE_JSONCIRBE__c.field-meta.xml
<CustomField>
    <fullName>CIBE_JSONCIRBE__c</fullName>
    <description>Json obtenido de la integración externalAgency/informationProviderAdministration/customers/id/risks/request (getCIRBE).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JSONCIRBE</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>