force-app/main/default/objects/Account/fields/CIBE_JsonRiesgoDetallado__c.field-meta.xml
<CustomField>
    <fullName>CIBE_JsonRiesgoDetallado__c</fullName>
    <description>Texto donde se guardará el JSON de la llamada de Riesgo Detallado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CIBE Json Riesgo Detallado</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>