force-app/main/default/objects/Account/fields/CIBE_LEXAprobado__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LEXAprobado__c</fullName>
    <label>LEX Formalizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>