force-app/main/default/objects/Account/fields/CIBE_LEXDisponible__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LEXDisponible__c</fullName>
    <label>LEX Disponible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>