force-app/main/default/objects/Account/fields/CIBE_LEXFechaFinVigencia__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LEXFechaFinVigencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LEX Fin de Vigencia</label>
    <type>Date</type>
</CustomField>