force-app/main/default/objects/Account/fields/CIBE_LGD__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LGD__c</fullName>
    <description>Proviniente del sistema de información de riesgo (Integración SIR)</description>
    <label>LGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>