force-app/main/default/objects/Account/fields/CIBE_Localidad__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Localidad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Localidad</label>
    <length>35</length>
    <type>Text</type>
</CustomField>