force-app/main/default/objects/Account/fields/CIBE_Movil__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Movil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Móvil</label>
    <type>Phone</type>
</CustomField>