force-app/main/default/objects/Account/fields/CIBE_Negocios__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Negocios__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Negocios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>