force-app/main/default/objects/Account/fields/CIBE_NetFinancialDebt_Ebitda__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NetFinancialDebt_Ebitda__c</fullName>
    <description>Campo &quot;Ratios con code = &apos;RAT EDF&apos; &quot; del Estado Financiero importado en la integración GBL</description>
    <label>Deuda financiera neta/Ebitda</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>