force-app/main/default/objects/Account/fields/CIBE_NetWorth__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NetWorth__c</fullName>
    <description>Campo &quot;Ratios con Code = RAT SCH&quot;  del Estado Financiero importado en la integración GBL</description>
    <label>Patrimonio neto</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>