force-app/main/default/objects/Account/fields/CIBE_NumeroEmpleados__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NumeroEmpleados__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nº de empleados</label>
    <length>10</length>
    <type>Text</type>
</CustomField>