force-app/main/default/objects/Account/fields/CIBE_Numpave__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Numpave__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Numpave</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>