force-app/main/default/objects/Account/fields/CIBE_PD__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PD__c</fullName>
    <label>PD</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>