force-app/main/default/objects/Account/fields/CIBE_RARGrupo__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARGrupo__c</fullName>
    <label>RAR grupo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>