force-app/main/default/objects/Account/fields/CIBE_Rating__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Rating__c</fullName>
    <description>Proveniente del sistema de información de riesgo (Integración SIR)</description>
    <label>Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>