force-app/main/default/objects/Account/fields/CIBE_Rating_PD__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Rating_PD__c</fullName>
    <formula>AV_Rating__c + &apos; &apos; + CIBE_Rating_SP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>