force-app/main/default/objects/Account/fields/CIBE_Rating_SP__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Rating_SP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rating S&amp;P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>