force-app/main/default/objects/Account/fields/CIBE_RatingLetra__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RatingLetra__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rating Letra</label>
    <length>1</length>
    <type>Text</type>
</CustomField>