force-app/main/default/objects/Account/fields/CIBE_RatingPDCalc__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RatingPDCalc__c</fullName>
    <formula>AV_Rating__c + &apos; (&apos; + 
IF(LEFT(TEXT(CIBE_PD__c*100), 1) == &apos;.&apos;,
&apos;0&apos;+ TEXT(CIBE_PD__c*100),
TEXT(CIBE_PD__c*100)) +&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating(PD)</label>
    <type>Text</type>
</CustomField>