force-app/main/default/objects/Account/fields/CIBE_RedesSegmentos__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RedesSegmentos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Redes-Segmentos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>