force-app/main/default/objects/Account/fields/CIBE_RelativeClientProfSeg__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RelativeClientProfSeg__c</fullName>
    <description>Campo para la segmentación dinámica</description>
    <label>Relative Profitability Clnt Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>Media Alta</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>MB</fullName>
                <label>Media Baja</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>MOR</fullName>
                <label>Morosos</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Inactivos</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Project Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>