force-app/main/default/objects/Account/fields/CIBE_Rentabilidad__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Rentabilidad__c</fullName>
    <label>% Rentabilidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>