force-app/main/default/objects/Account/fields/CIBE_Rentabilidad_IGC_T1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Rentabilidad_IGC_T1__c</fullName>
    <description>Importe de rentabilidad IGC T1 del cliente</description>
    <label>Rentabilidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>