force-app/main/default/objects/Account/fields/CIBE_Resources__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Resources__c</fullName>
    <description>Campo formula del campo AV_AhorroEInversion__c</description>
    <formula>AV_AhorroEInversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>