force-app/main/default/objects/Account/fields/CIBE_ResultadoExplotacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ResultadoExplotacion__c</fullName>
    <description>Campo &quot;Code Cuenta Resultados&quot; = &apos;C0491000&apos; del Estado Financiero importado en la integración GBL</description>
    <label>Resultado Explotación</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>