force-app/main/default/objects/Account/fields/CIBE_ResultadoPostImpuestos__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ResultadoPostImpuestos__c</fullName>
    <description>Campo &quot;Cuentas Resultados con Code = &apos;C0495000&apos; &quot; del Estado Financiero importado en la integración GBL</description>
    <label>Resultados después Impuestos</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>