force-app/main/default/objects/Account/fields/CIBE_RiesgoFirma__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RiesgoFirma__c</fullName>
    <label>Riesgo de firma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>