force-app/main/default/objects/Account/fields/CIBE_SectoresPaises__c.field-meta.xml
<CustomField>
    <fullName>CIBE_SectoresPaises__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sectores-Paises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>