force-app/main/default/objects/Account/fields/CIBE_Source__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Source__c</fullName>
    <description>Campo &quot;Source&quot; del Estado Financiero importado en la integración GBL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>