force-app/main/default/objects/Account/fields/CIBE_TicketSIR__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TicketSIR__c</fullName>
    <formula>LPAD(AV_NumPerso__c, 10, &apos;0&apos;) + &quot;000000000&quot; + &quot;000000000&quot;</formula>
    <label>Ticket SIR</label>
    <type>Text</type>
</CustomField>