force-app/main/default/objects/Account/fields/CIBE_TipoEEFF__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TipoEEFF__c</fullName>
    <description>Detalla el Tipo de Fuente obtenido para el Estado Financiero.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tipo de Fuente donde se ha obtenido el Estado Financiero.</inlineHelpText>
    <label>Fuente datos contables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>