force-app/main/default/objects/Account/fields/CSBD_Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Nombre_del_cliente__c</fullName>
    <description>Nombre del cliente</description>
    <formula>FirstName  &amp; &quot; &quot; &amp;  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>