force-app/main/default/objects/Account/fields/EV_LastModifiedDateAC__c.field-meta.xml
<CustomField>
    <fullName>EV_LastModifiedDateAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EV_LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>