force-app/main/default/objects/Account/fields/EV_NumeroAcciones__c.field-meta.xml
<CustomField>
    <fullName>EV_NumeroAcciones__c</fullName>
    <label>Número de acciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>