force-app/main/default/objects/Account/fields/OS_Cartera__c.field-meta.xml
<CustomField>
    <fullName>OS_Cartera__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cartera</label>
    <referenceTo>OS_Cartera__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>