force-app/main/default/objects/Account/fields/OS_Especialista_MIC__c.field-meta.xml
<CustomField>
    <fullName>OS_Especialista_MIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Especialista MIC</label>
    <referenceTo>OS_Cartera__c</referenceTo>
    <relationshipLabel>Accounts (Especialista MIC)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>