force-app/main/default/objects/Account/fields/OS_Premium__c.field-meta.xml
<CustomField>
    <fullName>OS_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium</label>
    <type>Checkbox</type>
</CustomField>