force-app/main/default/objects/Account/fields/SAC_TipoDeCodigo__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoDeCodigo__c</fullName>
    <label>Tipo de Código</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>NIF</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>Tarjeta Residencia</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>